syntax = "proto3";

option java_package = "com.example.happyplace";
option java_multiple_files = true;

message ItemQuantity {
  int32 amount = 1;
  enum MeasurementUnit {
    UNIT = 0;
    KG = 1;
    GRAM = 2;
    LITER = 3;
  }
  MeasurementUnit unit = 2;
}

message ShoppingListItem {
  string name = 1;
  string details = 2;
  bool bulk = 3;
  bool urgent = 4;
  bool isInCart = 5;
  int64 dateCreated = 7;
  ItemQuantity quantity = 8;
  string shop = 9;
  string category = 10;
}

message ShoppingListFilter {
  bool hideAlreadyInCart = 1;
  string category = 2;
  string shop = 3;
  bool urgent = 4;
  bool bulk = 5;

  enum SortOrder {
    NONE = 0;
    DATE = 1;
    NAME = 2;
  }
  SortOrder sortOrder = 6;
}

message LocalShoppingList {
  repeated ShoppingListItem items =  1;
  repeated string shops = 2;
  repeated string categories = 3;
  ShoppingListFilter filter = 4;
}

// Tasks
message User {
  string name = 1;
  uint32 id = 2;
}

message Periodicity {
  enum IntervalType {
    DAY = 0;
    WEEK = 1;
    MONTH = 2;
    YEAR = 3;
  }
  uint32 numberOfIntervals = 1;
  IntervalType intervalType = 2;
}

message Task {
  string name = 1;
  enum TaskType {
    UNDEFINED = 0;
    CLEANING = 1;
    MAINTENANCE = 2;
    SHOPPING = 3;
    COOKING = 4;
  }
  TaskType type = 2;
  int64 initialDate = 3;
  Periodicity periodicity = 4;
  User taskOwner = 5;
  string details = 6;
  int32 duration = 7;
  string id = 8;
  bool completed = 9;
}

message LocalTasksList {
  repeated Task tasks = 1;
  repeated User users = 2;
}